<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/geoMapLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeoMap">

    <com.uu_uce.views.CustomMap
        android:id="@+id/customMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/heightline_diff_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:paddingBottom="2dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/geomap_default_distance"
        android:textSize="12sp"
        android:textColor="@color/TextDarkGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.uu_uce.mapOverlay.ScaleWidget
        android:id="@+id/scaleWidget"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:paddingBottom="2dp"
        android:text="@string/geomap_default_distance"
        android:fontFamily="@font/roboto_bold"
        android:textSize="12sp"
        android:textColor="@color/TextDarkGrey"
        app:layout_constraintBottom_toTopOf="@id/heightline_diff_text"
        app:layout_constraintStart_toStartOf="parent" />

    <com.uu_uce.views.Menu
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/customMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:elevation="6dp"
        android:elevation="6dp">

        <com.uu_uce.views.DragButton
            android:id="@+id/dragBar"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:background="@color/Flirtatious"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/allpins_menuimage_description">

            <ImageView
                android:id="@+id/dragButton"
                android:textAllCaps="false"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:contentDescription="@string/menu_button_description"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/ic_sprite_arrowup" />
        </com.uu_uce.views.DragButton>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/dragBar"
            android:layout_marginTop="0dp"
            android:background="?colorPrimaryDarkRef" />

        <HorizontalScrollView
            android:id="@+id/toggle_layer_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dragBar">

            <LinearLayout
                android:id="@+id/toggle_layer_layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </HorizontalScrollView>

        <View
            android:id="@+id/sepparator"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_below="@+id/toggle_layer_scroll"
            android:layout_marginTop="0dp"
            android:background="@color/Flirtatious" />

        <LinearLayout
            android:id="@+id/lower_menu_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sepparator"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/allpins_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/allpins_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/menu_allpins_button_image"
                    android:cropToPadding="false"
                    android:scaleType="fitEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/allpins_button_text"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_menu_symbol_allpins" />

                <TextView
                    android:id="@+id/allpins_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/menu_allpins_button_text"
                    android:textAllCaps="false"
                    android:textColor="#767676"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/allpins_image"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fieldbook_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/fieldbook_image"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/menu_fieldbook_image_description"
                    android:cropToPadding="false"
                    android:scaleType="fitEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fieldbook_button_text"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_menu_symbol_fieldbook" />

                <TextView
                    android:id="@+id/fieldbook_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/menu_fieldbook_button_text"
                    android:textAllCaps="false"
                    android:textColor="#767676"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/fieldbook_image"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/menu_fieldbook_image_description"
                    android:cropToPadding="false"
                    android:scaleType="fitEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/profile_button_text"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_menu_symbol_profile" />

                <TextView
                    android:id="@+id/profile_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/menu_profile_button_text"
                    android:textAllCaps="false"
                    android:textColor="#767676"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/profile_image"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/settings_image"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/menu_fieldbook_image_description"
                    android:cropToPadding="false"
                    android:scaleType="fitEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/settings_button_text"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_menu_symbol_settings" />

                <TextView
                    android:id="@+id/settings_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/menu_settings_button_text"
                    android:textAllCaps="false"
                    android:textColor="#767676"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/settings_image"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/logout_image"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/menu_fieldbook_image_description"
                    android:cropToPadding="false"
                    android:scaleType="fitEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/logout_button_text"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_sprite_logout" />

                <TextView
                    android:id="@+id/logout_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/menu_logout_text"
                    android:textAllCaps="false"
                    android:textColor="#767676"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/logout_image"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </com.uu_uce.views.Menu>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/center_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_sprite_center"
        app:backgroundTint="#FFFFFF"
        app:elevation="5dp"
        android:elevation="5dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/legend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@id/center_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@android:drawable/ic_menu_mapmode"
        app:backgroundTint="#FFFFFF"
        app:elevation="5dp"
        android:elevation="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>