...

    <include
        android:id="@+id/all_pins_toolbar"
        layout="@layout/menu_bar" />

    <ScrollView
        android:id="@+id/settings_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                    android:text="@string/settings_download_maps"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/download_maps_button"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_download_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
...
                    android:text="@string/settings_maps_storage"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/delete_maps_button"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_delete_maps_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
...
