...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_window_title">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allpins_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/popup_window_close_button"
            tools:listitem="@layout/allpins_recyclerview_item" />

        <Button
            android:id="@+id/popup_window_close_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
...
