<resources xmlns:tools="http://schemas.android.com/tools">
    <!--General-->
    <string name="app_name">UCE</string>
    <string name="title_activity_settings">Settings</string>
    <string name="progress_popup_progress">Progress</string>
    <string name="positive_button_text">Yes</string>
    <string name="negative_button_text">No</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_popup_title">Delete</string>
    <string name="zip_download_completed">Download completed, unpacking</string>
    <string name="zip_unpack_completed">Unpacking completed</string>
    <string name="zip_unpacking_failed">Unpacking failed</string>
    <string name="download_failed">Download failed</string>
...
